Mini typo in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2029,8 +2029,8 @@ In \uppaal{}, they are interpreted as (bounded) integers: overflows may occur an
 \paragraph{Binary variables}
 
 \begin{becareful}
-Binary words translation into \uppaal{} formalism is an experimental feature. Binary words are translated and encoded into 32 bits integer variables.
-For this reason, translating binary words of length greater than 31 bits or shifting a binary word of an arbitrary length can lead to unexpected behaviors and results.
+Binary words translation into \uppaal{} formalism is experimental. Binary words are translated and encoded into 32-bit integer variables in \uppaal{} (with dedicated functions).
+For this reason, translating binary words of length greater than 31~bits or shifting a binary word of an arbitrary length can lead to unexpected behaviors and results.
 \end{becareful}
 
 
