--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -18,10 +18,10 @@
 % META DATA
 \hypersetup{
 	pdftitle={IMITATOR User Manual},
-	pdfauthor={\'Etienne Andr\'e}%
+	pdfauthor={\'Etienne Andr\'e et al.}%
 }
 \title{IMITATOR User Manual}
-\author{Étienne André}
+\author{Étienne André et al.}
 
 
 
@@ -4449,7 +4449,7 @@ Jaime~Arias simplified a lot the source code management and implemented new feat
 %
 Jiří~Srba suggested the translation of \imitator{}'s strong broadcast into \uppaal{}.
 %
-Benjamin~Loillier enhanced the syntax, notably allowing Boolean and int types.
+Benjamin~Loillier significantly enhanced the syntax, notably allowing Boolean and int types, and new syntactic enhancements such as arrays.
 %
 Dylan~Marinho reformatted the library of benchmarks~\cite{AMP21} and implemented the translation to~\jani{}.
 
