--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -655,6 +655,25 @@
 
 
 
+@inproceedings{CL00,
+	author    = {Cassez, Franck and
+				Larsen, Kim Guldstrand},
+	editor    = {Catuscia Palamidessi},
+	title     = {The Impressive Power of Stopwatches},
+	longbooktitle = {Proceedings of the 11th International Conference on Concurrency Theory ({CONCUR} 2000)},
+	booktitle = {{CONCUR}},
+	location  = {University Park, PA, USA},
+	eventdate = {2000-08-22/2000-08-25},
+	series    = {\LNCS{}},
+	volume    = {1877},
+	pages     = {138--152},
+	publisher = {Springer},
+	year      = {2000},
+	doi       = {10.1007/3-540-44618-4_12},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/concur/CassezL00},
+	bibsource = {dblp computer science bibliography, http://dblp.org},
+}
+
 
 
 @inproceedings{HHW95,
